fix: adjust blockquote styling for improved readability

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -39,16 +39,15 @@ h3, h4, h5, h6 {
 }
 
 blockquote {
-	font-style: italic;
-	margin: 1.5em; /* 24px/18px */
+	margin: 0.5em; /* 24px/18px */
 	-webkit-border-radius: 4px;
 	   -moz-border-radius: 4px;
 	    -ms-border-radius: 4px;
           border-radius: 4px;
 	background-color: darken($background-color, 5%);
-	padding: 0 1.5em; /* 24px/18px */
+	padding: 0 0.5em; /* 24px/18px */
 	p, ul, ol {
-		padding: 1.5em 0; /* 24px/18px */
+		padding: 0.5em 0; /* 24px/18px */
 	}
 }
 
@@ -81,7 +80,6 @@ h3, h4, h5, h6 {
 }
 
 blockquote {
-	font-style: italic;
 	margin: 1.3334em; /* 24px/18px */
 	-webkit-border-radius: 4px;
 	   -moz-border-radius: 4px;
